// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrossedText render crossed text default 1`] = `
<View>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#20242D",
          "fontFamily": "Inter-Regular",
          "fontSize": 22.5,
          "lineHeight": 28.5,
          "minHeight": 28.5,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "width": "100%",
          },
          {
            "backgroundColor": "#000",
            "height": 1.5,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`CrossedText render crossed text with lineHeight 1`] = `
<View>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#20242D",
          "fontFamily": "Inter-Regular",
          "fontSize": 22.5,
          "lineHeight": 28.5,
          "minHeight": 28.5,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "width": "100%",
          },
          {
            "backgroundColor": "#000",
            "height": 2,
          },
        ]
      }
    />
  </View>
</View>
`;
